--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
-    "Programming Language :: Python :: 3 :: Only"
 ]
 
 dependencies = []
@@ -93,18 +92,18 @@ no-sections = true
 [tool.uv]
 native-tls = true
 
-# Uncomment to use NBN internal PyPI mirror (requires NBN certs to be installed in the system)
-[[tool.uv.index]]
-name = "pypi-mirror"
-url = "https://apro.nbnco.net.au/api/pypi/cdtools-pypi-virtual/simple"
-default = true
+# # Uncomment to use NBN internal PyPI mirror (requires NBN certs to be installed in the system)
+# [[tool.uv.index]]
+# name = "pypi-mirror"
+# url = "https://apro.nbnco.net.au/api/pypi/cdtools-pypi-virtual/simple"
+# default = true
 
-# Settings to publish image to Artifactory using `uv publish`, replace with your own Artifactory repo URL
-[[tool.uv.index]]
-name = "nbn-artifactory"
-url = "https://apro.nbnco.net.au/api/pypi/test-pypi/simple"
-publish-url = "https://apro.nbnco.net.au/artifactory/api/pypi/test-pypi"
-explicit = true
+# # Settings to publish image to Artifactory using `uv publish`, replace with your own Artifactory repo URL
+# [[tool.uv.index]]
+# name = "nbn-artifactory"
+# url = "https://apro.nbnco.net.au/api/pypi/test-pypi/simple"
+# publish-url = "https://apro.nbnco.net.au/artifactory/api/pypi/test-pypi"
+# explicit = true
 
 [tool.commitizen]
 name = "cz_conventional_commits"
