--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -11,7 +11,7 @@ permissions:
 jobs:
   verify:
     name: Verify push from release branch
-    runs-on: code-scanning # TODO: change to your preferred runner
+    runs-on: ubuntu-latest
     outputs:
       is_release: ${{ steps.check.outputs.is_release }}
       version: ${{ steps.check.outputs.version }}
@@ -34,7 +34,7 @@ jobs:
 
   build:
     name: Build Package
-    runs-on: code-scanning # TODO: change to your preferred runner
+    runs-on: ubuntu-latest
     needs: verify
     if: needs.verify.outputs.is_release == 'true'
     steps:
@@ -74,7 +74,7 @@ jobs:
 
   create-tag:
     name: Create Git Tag
-    runs-on: code-scanning # TODO: change to your preferred runner
+    runs-on: ubuntu-latest
     needs: [verify, build]
     if: needs.verify.outputs.is_release == 'true'
     permissions:
@@ -106,7 +106,7 @@ jobs:
 
   github-release:
     name: Create GitHub Release
-    runs-on: code-scanning # TODO: change to your preferred runner
+    runs-on: ubuntu-latest
     needs: [verify, build, create-tag]
     if: needs.verify.outputs.is_release == 'true'
     permissions:
