fix: add pre-commit check

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,6 +37,7 @@ repos:
         stages: [pre-commit]
       - id: name-tests-test
         args: ['--pytest-test-first']
+        stages: [pre-commit]
       - id: trailing-whitespace
         stages: [pre-commit]
 
