--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -78,6 +78,10 @@ jobs:
         run: |
           uv lock --upgrade
 
+      - name: Upgrade pre-commits
+        run: |
+          uv run pre-commit autoupdate
+
       - name: Capture version & changelog
         id: release_info
         run: |
