fix: add suggestions based on copilot suggestions

--- a/.github/workflows/release-branch.yml
+++ b/.github/workflows/release-branch.yml
@@ -78,7 +78,7 @@ jobs:
         run: |
           uv lock --upgrade
 
-      - name: Upgrade pre-commits
+      - name: Upgrade pre-commit hooks
         run: |
           uv run pre-commit autoupdate
 
