--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -219,3 +219,24 @@ jobs:
                 body: comment
               });
             }
+
+      - name: Build
+        run: |
+          ./scripts/build.sh
+
+
+      - name: Build
+        run: |
+          ./scripts/build.sh
+
+      - name: Upload build artifact
+        id: upload
+        uses: actions/upload-artifact@v4
+        with:
+          path: dist/*
+          name: artifact.zip
+      
+      - uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: artifact.zip
+          subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
