Update artifact naming in CI workflow
Signed-off-by: Keith <keithlai124@users.noreply.github.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -235,7 +235,7 @@ jobs:
 
       - uses: actions/attest-build-provenance@v3
         with:
-          subject-name: artifact-${{ steps.upload.outputs.artifact-id }}.zip
+          subject-name: artifact-${{ matrix.python-version }}-${{ steps.upload.outputs.artifact-id }}.zip
           subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
 
       - name: Generate SBOM
