--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -247,6 +247,7 @@ jobs:
           path: dist
           format: 'cyclonedx-json'
           output-file: sbom.cyclonedx.json
+          dependency-snapshot: true
       - name: Attest
         uses: actions/attest-sbom@v3
         if: matrix.python-version == steps.python-version-file.outputs.version
