--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -59,12 +59,34 @@ jobs:
         run: |
           ./scripts/build.sh
 
-      - name: Upload build artifacts
+      - name: Upload build artifact
+        id: upload
         uses: actions/upload-artifact@v5
         with:
+          path: dist/*
           name: dist
-          path: dist/
-          retention-days: 1
+
+      - uses: actions/attest-build-provenance@v3
+        with:
+          subject-name: dist
+          subject-digest: sha256:${{ steps.upload.outputs.artifact-digest }}
+
+      - name: Generate SBOM
+        uses: anchore/sbom-action@v0
+        if: matrix.python-version == steps.python-version-file.outputs.version
+        with:
+          path: dist
+          format: 'cyclonedx-json'
+          output-file: sbom.cyclonedx.json
+          dependency-snapshot: true
+
+      - name: Attest
+        uses: actions/attest-sbom@v3
+        if: matrix.python-version == steps.python-version-file.outputs.version
+        with:
+          subject-path: 'dist/*.whl, dist/*.tar.gz'
+          sbom-path: sbom.cyclonedx.json
+
 
       - name: Publish to Artifactory Pro
         env:
