--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,8 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      id-token: write
+      attestations: write
 
     strategy:
       max-parallel: 2
