Add read permissions for contents in release workflow
Signed-off-by: Keith <keithlai124@users.noreply.github.com>

--- a/.github/workflows/release-publish.yml
+++ b/.github/workflows/release-publish.yml
@@ -38,6 +38,7 @@ jobs:
     needs: verify
     if: needs.verify.outputs.is_release == 'true'
     permissions:
+      contents: read
       id-token: write
       attestations: write
     steps:
