--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -225,6 +225,13 @@ jobs:
         run: |
           ./scripts/build.sh
 
+      - name: Upload build artifact
+        id: upload
+        uses: actions/upload-artifact@v5
+        with:
+          path: dist/*
+          name: dist
+
       - uses: actions/attest-build-provenance@v3
         if: matrix.python-version == steps.python-version-file.outputs.version
         with:
